# snp_fs22

./: README.md
Hello World/: CMakeLists.txt  main.c
P01/: CMakeLists.txt  main.c
P02/: CMakeLists.txt  main.c
P03/: CMakeLists.txt  aufgabe11.c  aufgabe12.c  aufgabe13.c  aufgabe14.c  bin_calculator.c  header.h  main.c  simple_shape.c
P04/: CMakeLists.txt  header.h  library.h
P04/modularize/: Makefile
P04/modularize/java/: read.java  rectang.java  triangle.java
P04/modularize/src/: read.c  read.h  rectang.c  rectang.h  triangle.c
P04/modularize/test/: tests.c
P04/show-dependencies/src/: data.c
P04/show-dependencies/tests/: tests.c
P05/: CMakeLists.txt  backup_code.txt  main.c
P05/tic-tac-toe/src/: model.c
P05/tic-tac-toe/tests/: runtest
P06/: CMakeLists.txt
P06/src/: main.c
P09_File_Operations/: CMakeLists.txt
P09_File_Operations/personen-verwaltung-persistent/: person_list.csv  person_list.csvbak
P09_File_Operations/personen-verwaltung-persistent/src/: file_io.c  file_io.h  main.c  person.c  person.h
P09_File_Operations/personen-verwaltung-persistent/tests/: tests.c
P10_Sync/Sync/advancedSequence/: coffeeTeller.c  coffeeTeller.e  customer.c  customer.e  startApp.c  startApp.e
P10_Sync/Sync/banking/a1/: banking.c  main.e
P10_Sync/Sync/banking/a2/: banking.c  main.e
P10_Sync/Sync/basicSequence/: coffeeTeller.c  coffeeTeller.e  commonDefs.h  customer.c  customer.e  startApp.c  startApp.e
P10_Sync/Sync/mutex/: coffeeTeller.c  customer.c  startApp.c  startApp.e
